Reetan.Nayak Dev 25/force-app/main/default/objects/Survey_Results__c/Survey_Results__c.object-meta.xml
<CustomObject>
    <label>Survey Results</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Survey Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>