Reetan.Nayak Dev 25/force-app/main/default/objects/Survey_Results__c/fields/Overall_Satisfaftion__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaftion__c</fullName>
    <label>Overall Satisfaftion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>