Reetan.Nayak Dev 25/force-app/main/default/objects/Survey_Results__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which Rep did you work with</inlineHelpText>
    <label>Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>